fix(Sidebar): add background to full width sidebar so that messages do not overlap it.

--- a/kit/src/style.scss
+++ b/kit/src/style.scss
@@ -370,6 +370,8 @@ p {
         width: 100%;
         height: 100%;
         position: absolute;
+        z-index: 1001;
+        background: var(--background);
     }
 
 	// #settings-layout > #content {
